auto-test/tests/chapter_18/invalid_types/initializers/init_struct_with_string.c
struct chars {
    char a;
    char b;
    char c;
    char null;
};

int main(void) {

    
    
    struct chars my_chars = "abc";
    return 0;
}